<resources>
    <string name="app_name">WillDo</string>
    <string name="to_do_list_title">ToDo List</string>
    <string name="item_title_hint">Enter a title for this to-do.</string>
    <string name="title_label">Title</string>
    <string name="details_label">Details</string>
    <string name="solved_label">Solved?</string>
    <string name="action_settings">Settings</string>
    <string name="date_picker_title">Date of to-do</string>
    <string name="new_item">New task</string>
    <string name="delete_item">Delete</string>
    <string name="search_item">Search</string>
    <string name="clear_search">Clear</string>
    <string name="done_buton">Done</string>
    <string name="location_button">Get Current Position</string>
    <string name="detail_label">Details</string>
    <string name="menu_synch">Synchronize with server</string>
    <string name="due_label">Deadline</string>
</resources>
