<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_label"
            style="?android:listSeparatorTextViewStyle"/>
        <Button
            android:id="@+id/item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/item_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/location_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_label"
            style="?android:listSeparatorTextViewStyle"/>
        <EditText
            android:id="@+id/item_detail"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:enabled="true"
            android:gravity="top"
            android:layout_gravity="fill_horizontal"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="10"
            android:scrollbars="vertical"
            />

        <CheckBox
            android:id="@+id/item_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/solved_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginBottom="0dp"
            android:text="@string/done_buton"/>
    </LinearLayout>

</LinearLayout>
